# PyFTPX

./: README.md  pyproject.toml
docs/: protocol-spec.md
recv/: sample.txt
src/pyftpx/: __init__.py  cli.py  codec.py  protocol.py  transfer.py  types.py
src/pyftpx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
