[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyftpx"
version = "0.1.0"
description = "Python File Transfer eXperimental Protocol (PyFTPX)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "PyFTPX Contributors" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = []

[project.scripts]
pyftpx = "pyftpx.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
